--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "uuid": "^2.0.3",
+    "body-parser": "^1.4.3",
+    "express": "^4.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
