--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "dependencies": {
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "uuid": "^2.0.3",
-    "body-parser": "^1.4.3",
-    "express": "^4.4.5"
+    "uuid": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
